--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
    
 <body>
     <div class="center">
-        <p>Danish Mohammed 
-            <ul>
-                <a href="https://www.linkedin.com/in/danish-mohammed-37364954">My LinkedIn Page</a>
-                <a href="https://www.youtube.com/watch?v=SijXazsElZQ">My favorite type of coffee</a>
-                <a href="https://github.com/mrscraps13">Github page</a>
-            </ul>
-        </p>
+            <p>Danish Mohammed 
+                <ul>
+                    <a href ="https://www.facebook.com/ChicagoCriticalMass">Biking Around the city!</a>
+                    <a href="https://www.linkedin.com/in/danish-mohammed-37364954">My LinkedIn Page</a>
+                    <a href="https://www.youtube.com/watch?v=SijXazsElZQ">My favorite type of coffee</a>
+                    <a href="https://github.com/mrscraps13">Github page</a>
+                </ul>
+            </p>
     </div>
+    <div> Website visit count:</div>
+    <div class="website-counter"></div>
+    <button id="reset">Reset</button>
 </body>
 </html> 
