--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
                 </ul>
             </p>
     </div>
+    <a href="mailto:danxb47@icloud.com?subject=I like what you've got, tell me more!">
+    Using the subject parameter
+    </a>
 </body>
 </html> 
