--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                 </ul>
             </p>
     </div>
-    <a href="mailto:danxb47@icloud.com?subject=I like what you've got, tell me more!">
-    Using the subject parameter
-    </a>
+    <div>
+        <a href="mailto:danxb47@icloud.com?subject=I like what you've got, tell me more!">
+        Using the subject parameter
+        </a>
+    </div>
 </body>
 </html> 
