modified:   index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <p>Danish Mohammed 
                 <ul>
                     <h4> My hobbies include biking, and drinking coffee, and learning things i havent expierenced.</h4>
+                        <p>per iudicium et error</p>
                     <a href ="https://www.facebook.com/ChicagoCriticalMass">Biking Around the city!</a>
                     <a href="https://www.linkedin.com/in/danish-mohammed-37364954">My LinkedIn Page</a>
                     <a href="https://www.youtube.com/watch?v=SijXazsElZQ">My favorite type of coffee</a>
@@ -20,7 +21,7 @@
             </p>
     </div>
     <div>
-        <a href="mailto:danxb47@icloud.com?subject=I like what you've got, tell me more!">
+        <a href="mailto:danxb47@icloud.com?subject=I like what you've got, show me what've got!"> Feel Free to reach out!
         </a>
     </div>
 </body>
