--- a/index.html
+++ b/index.html
@@ -24,5 +24,19 @@
         <a href="mailto:danxb47@icloud.com?subject=I like what you've got, show me what've got!"> Feel Free to reach out!
         </a>
     </div>
+    <div>
+        <html>
+  <head>
+    <title>Website Counter</title>
+    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div>Website visit count:</div>
+    <div class="website-counter"></div>
+    <button id="reset">Reset</button>
+  </body>
+</html>
+    </div>
 </body>
 </html> 
