--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div>Website visit count:</div>
+    <div>Website visitor count:</div>
     <div class="website-counter"></div>
     <button id="reset">Reset</button>
   </body>
