--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </p>
     </div>
     <div>
-        <a href="mailto:danxb47@icloud.com?subject=I like what you've got, show me what've got!"> Feel Free to reach out!
+        <a href="mailto:danxb47@icloud.com?subject=I like what you've got!"> Feel Free to reach out!
         </a>
     </div>
     <div>
