--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </p>
     </div>
     <div>
-        <a href="mailto:danish@danishm.me?subject=I like what you've got!"> Feel Free to reach out!
+        <a href="mailto:danish@danishm.me&subject=I like what you've got!&body=<insert your thoughts here>"> Feel Free to reach out!
         </a>
     </div>
     <div>
