--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="center">
             <p>Danish Mohammed 
                 <ul>
-                    <h4> My hobbies include biking, and drinking coffee, and learning things i havent expierenced.</h4>
+                    <h4> My hobbies include biking, and drinking coffee, and learning things.</h4>
                         <p>per iudicium et error</p>
                     <a href="https://github.com/chihacknight/chn-ghost-buses">Ghost Buses</a>
                     <a href ="https://www.facebook.com/ChicagoCriticalMass">Biking Around the city!</a>
@@ -22,7 +22,7 @@
             </p>
     </div>
     <div>
-        <a href="mailto:danish@danishm.me&subject=I like what you've got!&body=<insert your thoughts here>"> Feel Free to reach out!
+        <a href="mailto:danxb47@icloud.com?subject=I like what you've got, show me what've got!"> Feel Free to reach out!
         </a>
     </div>
     <div>
